# backend/src/main/java/com/odde/doughnut/controllers/RestRecallPromptController.java
@@ -2,9 +2,7 @@ package com.odde.doughnut.controllers;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.odde.doughnut.controllers.dto.AnswerDTO;
-import com.odde.doughnut.controllers.dto.AnswerSpellingDTO;
 import com.odde.doughnut.controllers.dto.QuestionContestResult;
-import com.odde.doughnut.controllers.dto.SpellingResultDTO;
 import com.odde.doughnut.entities.*;
 import com.odde.doughnut.exceptions.UnexpectedNoAccessRightException;
 import com.odde.doughnut.factoryServices.ModelFactoryService;
@@ -76,19 +74,6 @@ class RestRecallPromptController {
     currentUser.assertLoggedIn();
     return recallQuestionService.answerQuestion(
         recallPrompt,
-        answerDTO,
-        currentUser.getEntity(),
-        testabilitySettings.getCurrentUTCTimestamp());
-  }
-
-  @PostMapping("/{memoryTracker}/answer-spelling")
-  @Transactional
-  public SpellingResultDTO answerSpelling(
-      @PathVariable("memoryTracker") @Schema(type = "integer") MemoryTracker memoryTracker,
-      @Valid @RequestBody AnswerSpellingDTO answerDTO) {
-    currentUser.assertLoggedIn();
-    return recallQuestionService.answerSpelling(
-        memoryTracker,
         answerDTO,
         currentUser.getEntity(),
         testabilitySettings.getCurrentUTCTimestamp());
