# open_api_docs.yaml
@@ -633,36 +633,6 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/AnsweredQuestion"
-  /api/recall-prompts/{memoryTracker}/answer-spelling:
-    post:
-      tags:
-      - rest-recall-prompt-controller
-      operationId: answerSpelling
-      parameters:
-      - name: memoryTracker
-        in: path
-        required: true
-        schema:
-          type: integer
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/AnswerSpellingDTO"
-        required: true
-      responses:
-        "500":
-          description: Internal Server Error
-          content:
-            '*/*':
-              schema:
-                type: string
-        "200":
-          description: OK
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/SpellingResultDTO"
   /api/predefined-questions/{predefinedQuestion}/toggle-approval:
     post:
       tags:
@@ -1304,6 +1274,36 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/MemoryTracker"
+  /api/memory-trackers/{memoryTracker}/answer-spelling:
+    post:
+      tags:
+      - rest-memory-tracker-controller
+      operationId: answerSpelling
+      parameters:
+      - name: memoryTracker
+        in: path
+        required: true
+        schema:
+          type: integer
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/AnswerSpellingDTO"
+        required: true
+      responses:
+        "500":
+          description: Internal Server Error
+          content:
+            '*/*':
+              schema:
+                type: string
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/SpellingResultDTO"
   /api/links/{link}:
     post:
       tags:
@@ -3682,22 +3682,6 @@ components:
       - answer
       - predefinedQuestion
       - recallPromptId
-    AnswerSpellingDTO:
-      type: object
-      properties:
-        spellingAnswer:
-          type: string
-    SpellingResultDTO:
-      type: object
-      properties:
-        note:
-          $ref: "#/components/schemas/Note"
-        answer:
-          type: string
-        isCorrect:
-          type: boolean
-      required:
-      - note
     QuestionSuggestionCreationParams:
       type: object
       properties:
@@ -3856,6 +3840,22 @@ components:
       required:
       - id
       - nextRecallAt
+      - note
+    AnswerSpellingDTO:
+      type: object
+      properties:
+        spellingAnswer:
+          type: string
+    SpellingResultDTO:
+      type: object
+      properties:
+        note:
+          $ref: "#/components/schemas/Note"
+        answer:
+          type: string
+        isCorrect:
+          type: boolean
+      required:
       - note
     LinkCreation:
       type: object
